# server

./: .gitignore  Cargo.toml  README.md  WARP.md  flake.nix  justfile  rustfmt.toml  stardust-xr-server.desktop
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml
.lapce/: run.toml
.well-known/: funding-manifest-urls
.zed/: debug.json
codegen/: Cargo.toml
codegen/src/: lib.rs
foundation/: Cargo.toml
foundation/src/: deduped_string.rs  error.rs  lib.rs  method_response.rs  on_drop.rs  registry.rs  resource.rs  selfref.rs
nix/: gnome-graphical-test.nix  meshoptimizer.nix  sk_gpu.nix  stardust-xr-server.nix
src/: bevy_plugin.rs  main.rs  openxr_helpers.rs  oxr_render_plugin.rs  session.rs  tracking_offset.rs  type_helpers.rs
src/bevy_int/: bevy_channel.rs  color.rs  flatscreen_cam.rs  mod.rs  spectator_cam.rs
src/core/: bevy_channel.rs  buffers.rs  client.rs  client_state.rs  color.rs  delta.rs  destroy_queue.rs  entity_handle.rs  error.rs  eventloop.rs  graphics_info.rs  id.rs  idl_utils.rs  mod.rs  node_collections.rs  nodelist.rs  queued_mutex.rs  registry.rs  resource.rs  scenegraph.rs  server_interface.rs  task.rs  typed_datamap.rs  vulkano_data.rs
src/nodes/: alias.rs  audio.rs  camera.rs  core.rs  data.rs  field.rs  fields.rs  hmd.rs  input.rs  input_pointer.rs  item.rs  mod.rs  model.rs  root.rs  sound.rs  spatial.rs  startup.rs
src/nodes/drawable/: dmatex.rs  holdout.wgsl  line.wgsl  lines.rs  mod.rs  model.rs  shader_manipulation.rs  shaders.rs  sky.rs  text.rs
src/nodes/drawable/assets/shaders/: shader_unlit_gamma.hlsl.sks  shader_unlit_simula.hlsl.sks
src/nodes/drawable/shaders/: mod.rs  shader_unlit_gamma.sks  shader_unlit_simula.hlsl  shader_unlit_simula.sks
src/nodes/drawable/shaders_src/: shader_unlit_gamma.hlsl
src/nodes/fields/: box.rs  cylinder.rs  mod.rs  sphere.rs  torus.rs
src/nodes/input/: hand.rs  handler.rs  link.rs  method.rs  mod.rs  pointer.rs  tip.rs
src/nodes/items/: camera.rs  environment.rs  mod.rs  panel.rs
src/nodes/spatial/: mod.rs  zone.rs
src/objects/: hmd.rs  mod.rs  play_space.rs
src/objects/input/: cursor.blend  cursor.glb  eye_pointer.rs  mod.rs  mouse_pointer.rs  oxr_controller.rs  oxr_hand.rs  sk.kmp  sk_controller.rs  sk_hand.rs
src/openxr/: action.rs  action_set.rs  instance.rs  mod.rs  session.rs  system.rs
src/query/: mod.rs  spatial_query.rs  tests.rs
src/wayland/: compositor.rs  data_device.rs  decoration.rs  display.rs  dmabuf.rs  drm.rs  mesa_drm.rs  mod.rs  panel_item.rs  presentation.rs  registry.rs  relative_pointer.rs  seat.rs  seat_old.rs  shader_unlit_gamma.sks  state.rs  surface.rs  util.rs  utils.rs  viewporter.rs  vulkano_data.rs  wayland-drm.xml  xdg_activation.rs  xdg_decoration.rs  xdg_shell.rs  xwayland.rs  xwayland_rootful.rs  xwayland_rootless.rs
src/wayland/core/: buffer.rs  callback.rs  compositor.rs  data_device.rs  display.rs  keyboard.rs  mod.rs  output.rs  pointer.rs  registry.rs  seat.rs  shm.rs  shm_buffer_backing.rs  shm_pool.rs  subcompositor.rs  surface.rs  touch.rs
src/wayland/dmabuf/: buffer_backing.rs  buffer_params.rs  feedback.rs  mod.rs
src/wayland/shaders/: mod.rs  shader_unlit_simula.hlsl  shader_unlit_simula.sks  simula.frag  simula.vert
src/wayland/xdg/: backend.rs  decoration.rs  mod.rs  popup.rs  positioner.rs  surface.rs  toplevel.rs  wm_base.rs
src/wayland/xdg_shell/: backend.rs  mod.rs  popup.rs  positioner.rs  surface.rs  toplevel.rs
