[package]
edition = "2021"
name = "stardust-xr-server-codegen"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
quote = "1.0.33"
mint = "0.5.9"
proc-macro2 = "1.0.71"
split-iter = "0.1.0"

[dependencies.stardust-xr-schemas]
git = "https://github.com/StardustXR/core.git"
branch = "dev"
