[package]
edition = "2024"
name = "stardust-xr-server-codegen"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.10.0"
quote = "1.0.33"
proc-macro2 = "1.0.71"

[dependencies.stardust-xr-protocol]
git = "https://github.com/StardustXR/core.git"
# path = "../../core/protocol"
