[package]
edition = "2024"
name = "stardust-xr-server-foundation"
version = "0.1.0"

[features]
default = []
profile_tokio = ["tokio/tracing"]

[dependencies]
# small utility thingys
rustc-hash = "2.0.0"
parking_lot = "0.12.3"
dashmap = "6.1.0"

# rust errors/logging
color-eyre = { version = "0.6.3", default-features = false }
thiserror = "2.0.11"

# (de)serialization
serde = { version = "1.0.205", features = ["derive"] }

# mathy stuffs
tokio = { version = "1.39.2", features = ["rt-multi-thread", "signal", "time"] }

[dependencies.stardust-xr-wire]
git = "https://github.com/StardustXR/core.git"
# path = "../core/wire"
